Add favicon and other minor updates

--- a/index.qmd
+++ b/index.qmd
@@ -4,6 +4,7 @@ comments: False
 format:
   html:
     page-layout: full
+# list latest 3 blog post on home page
 listing:
   - id: landing-posts
     contents: posts
@@ -31,8 +32,8 @@ about:
       text: Twitter
       href: https://twitter.com/ShashankData
     - icon: clipboard-data
-      text: Kaggle
-      href: https://www.kaggle.com/shashank2806
+      text: Resume
+      href: resume.pdf
     - icon: envelope
       text: Email
       href: mailto:correspond.shashank@gmail.com
@@ -44,6 +45,15 @@ I am working as Data Scientist with 3+ years of experience. I have led several D
 Read more about me [here](about.qmd).
 :::::
 
+:::::{.grid}
+::::{.g-col-12 .g-col-md-12}
+## Latest Blogs
+Click [here](blog.qmd) to check out more blogs.
+
+:::{#landing-posts}
+:::
+::::
+:::::
 
 
 <a href="https://info.flagcounter.com/Gtp6"><img
