Add Playtorch Blog

--- a/blog.qmd
+++ b/blog.qmd
@@ -12,3 +12,7 @@ listing:
 page-layout: full
 title-block-banner: false
 ---
+
+<a href="https://info.flagcounter.com/Gtp6"><img
+          src="https://s01.flagcounter.com/count/Gtp6/bg_FFFFFF/txt_000000/border_FFFFFF/columns_5/maxflags_12/viewers_0/labels_0/pageviews_0/flags_0/percent_0/"
+          border="0" style="display:none"></a>
