--- a/index.qmd
+++ b/index.qmd
@@ -53,7 +53,7 @@ Click [here](blog.qmd) to check out more blogs.
 ::::
 :::::
 
-
+# For tracking
 <a href="https://info.flagcounter.com/Gtp6"><img
           src="https://s01.flagcounter.com/count/Gtp6/bg_FFFFFF/txt_000000/border_FFFFFF/columns_5/maxflags_12/viewers_0/labels_0/pageviews_0/flags_0/percent_0/"
           border="0" style="display:none"></a>
